2008-04-17  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-internal.lisp (add-frame): Add frame return the
	created frame.
	(show-all-children): Move the size computation outside the
	show-child part.

	* src/bindings-second-mode.lisp (with-movement): Redisplay only
	the current child.

	* src/clfswm-util.lisp (mouse-click-to-focus-generic): Redisplay
	only the current child.

	* src/clfswm-internal.lisp (show-all-children): New display-child
	parameter to display only the desired child and its children.
	(select-next/previous-child): Only display the current child.

2008-04-14  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm.lisp (init-display): Move the default frame creation
	on the default init hook.

	* src/clfswm-keys.lisp (define-ungrab/grab): Handle all keysyms in
	the main mode (for example: "1" on an azerty keyboard).

2008-04-13  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-keys.lisp (find-key-from-code): Better handle of
	keysyms. Revert to old grabbing method for the main mode.

2008-04-12  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm.lisp (init-display): Add key handling on no focus
	window and on frame windows.

2008-04-11  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm.lisp (main): Keyboard handle strategie change: Grab
	all keys by default and replay just what is needed. No change for
	the second mode.

	* src/clfswm-keys.lisp: remove grab/ungrab main keys.
	(find-key-from-code): Test for shift and not shift presence.

2008-04-09  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-internal.lisp (switch-to-root-frame): show later -
	new key parameter to have less flickering.

2008-04-07  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/bindings-second-mode.lisp (frame-layout-once-menu): Set the
	layout only one time and revert to no-layout to freely handle
	frames.

	* src/clfswm-nw-hooks.lisp